--- a/Modeling Running Performance.Rmd
+++ b/Modeling Running Performance.Rmd
@@ -31,9 +31,9 @@ summary(prelim_pace)
 
 ```
 
-The ultimate goal of this model is to utilize data leading up to a performance event. As many races take place on Sunday and the typical long-distance run in this data set takes place on Sunday, the final linear regression model will begin with predicting Sunday performance. If Sunday data is absent, the week will be dropped. Each individual week will be added to a k-fold cross validation. 
+The ultimate goal of this model is to utilize data leading up to a performance event. As many races take place on Sunday and the typical long-distance run in this data set takes place on Sunday, the final linear regression model will begin with predicting Sunday performance. If Sunday data is absent, the week will be dropped. 
 
-To being predicting run performance, an initial linear regression model is built below using all available data. 
+To being predicting run performance, an initial linear regression model will be built below using all available data. Based on the preliminary linear regression above, an aerobic training effect that is highly impacting (value between 4 and 4.9) is strongly related to average pace. This variable will be the target variable in the logistic regression that follows. 
 
 ```{r}
 set.seed(456)
@@ -44,7 +44,7 @@ train_df <- training(df_split)
 test_df <- testing(df_split)
 
 # Create recipe
-pace_rec <- recipe(avg_pace_sec ~ ., data = df)
+pace_rec <- recipe(avg_pace_sec ~ ., data = train_df)
 
 summary(pace_rec)
 ```
@@ -58,7 +58,7 @@ pace_wflow <- workflow()%>%
   add_recipe(pace_rec)
 
 pace_fit <- pace_wflow %>% 
-  fit(data = train_df)
+  fit(data = train_df) 
 
 tidy(pace_fit)
 ```
@@ -68,28 +68,109 @@ predict(pace_fit, test_df)
 ```
 
 ```{r}
-pace_aug <- augment(pace_fit, train_df)
+pace_aug <- augment(pace_fit, test_df)
 
-pace_all_train <- pace_aug %>%
-                    mutate(data = "train",
-                            model = "all")
-
-pace_aug
+pace_aug %>% select(avg_pace_sec, .pred)
 ```
 
 ```{r}
-n_error <- pace_aug %>% 
-  yardstick::rmse(truth = avg_pace_sec, .pred)
+pace_error <- pace_aug %>% 
+  rmse(truth = avg_pace_sec, .pred)
 
-summary(n_error)
+pace_error
+```
+
+The most significant variables (based on p-value) are average heart rate, average cadence, average stride, and aerobic training effect. The binary variable aerobic_fct_Impacting had a good p-value, as well, but that value is related to aerobic training effect, so it is left out of this analysis.
+```{r}
+set.seed(456)
+# Split data into training and testing sets
+df_split <- initial_split(df, prop = 3/4)
+
+train_df <- training(df_split)
+test_df <- testing(df_split)
+
+# Create recipe
+pace_rec_2 <- recipe(avg_pace_sec ~ avg_hr + avg_run_cadence + avg_stride + aerobic_TE, data = train_df)
+
+summary(pace_rec_2)
 ```
 
 ```{r}
+lreg <- linear_reg() %>%
+  set_engine("lm")
 
+pace_wflow_2 <- workflow()%>%
+  add_model(lreg) %>%
+  add_recipe(pace_rec_2)
+
+pace_fit_2 <- pace_wflow_2 %>% 
+  fit(data = train_df_2) 
+
+tidy(pace_fit_2)
 ```
 
 ```{r}
+predict(pace_fit_2, test_df_2)
+```
 
+```{r}
+pace_aug_2 <- augment(pace_fit_2, test_df_2)
+
+pace_aug_2 %>% select(avg_pace_sec, .pred)
+```
+
+```{r}
+pace_error_2 <- pace_aug_2 %>% 
+  rmse(truth = avg_pace_sec, .pred)
+
+pace_error_2
+```
+
+
+```{r}
+set.seed(456)
+# Split data into training and testing sets
+df$aerobic_fct_Impacting <- as.factor(df$aerobic_fct_Impacting)
+df_split <- initial_split(df, prop = 3/4)
+
+train_df <- training(df_split)
+test_df <- testing(df_split)
+
+# Create recipe
+log_aerobic <- recipe(aerobic_fct_Impacting ~ ., data = train_df)
+
+summary(log_aerobic)
+```
+
+```{r}
+log_reg <- logistic_reg() %>%
+  set_engine("glm")
+
+aero_workflow <- workflow()%>%
+  add_model(log_reg) %>%
+  add_recipe(log_aerobic)
+
+aero_fit <- aero_workflow %>% 
+  fit(data = train_df) 
+
+tidy(aero_fit)
+```
+
+```{r}
+predict(aero_fit, test_df)
+```
+
+```{r}
+aero_aug <- augment(aero_fit, test_df)
+
+aero_aug %>% select(aerobic_fct_Impacting, .pred_class)
+```
+
+```{r}
+pace_error_2 <- pace_aug_2 %>% 
+  rmse(truth = avg_pace_sec, .pred)
+
+pace_error_2
 ```
 
 ```{r}
